Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Enhancements]
  - Add support for write-once attributes.

  - Dies if a trigger is added to a constant attribute.

  [Documentation]
  - Updated ABSTRACT and POD accordingly.

v0.1.4    2018-11-10 12:27:54+00:00 Europe/London
  [Documentation]
  - Fixed typo.

v0.1.3    2018-11-10 12:23:52+00:00 Europe/London
  [Documentation]
  - Credited ideas for the module to Kang-min Liu 劉康民 <gugod@gugod.org>.

  [Toolchain]
  - Removed some redundant dependencies.

  [Other]
  - Bumped minimum version of Types::Const.

v0.1.2    2018-11-10 01:30:19+00:00 Europe/London
  [Bug Fixes]
  - Actually set the coercion.

  [Documentation]
  - Elaborated on what this is equivalent to.

v0.1.1    2018-11-10 00:28:47+00:00 Europe/London
  [Bug Fixes]
  - Specified a minimum version of Types::Const.

v0.1.0    2018-11-10 00:25:46+00:00 Europe/London
  - Initial release.