@@ -1,9 +1,10 @@
 requires "Moo" => "1.006000";
 requires "Safe::Isa" => "0";
-requires "Types::Const" => "v0.3.2";
+requires "Types::Const" => "v0.3.3";
 requires "Types::Standard" => "0";
 requires "namespace::autoclean" => "0";
 requires "perl" => "v5.8.0";
+requires "version" => "0.77";
 
 on 'test' => sub {
   requires "File::Spec" => "0";
