@@ -46,7 +46,8 @@ remove = Carp
 remove = Moo::Role
 
 [Prereqs]
-Types::Const = v0.3.2
+Types::Const = v0.3.3
+version      = 0.77
 
 [Prereqs / TestRequires]
 Moo = 1.006000
